[gd_scene load_steps=3 format=3 uid="uid://h7so45kbcg12"]

[ext_resource type="Script" uid="uid://df0fh22oc8yq4" path="res://welcome_screen/welcome_screen.gd" id="1_2u8hd"]
[ext_resource type="Texture2D" uid="uid://dvka68ounxvou" path="res://icon.svg" id="2_4vfht"]

[node name="WelcomeScreen" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2u8hd")

[node name="OuterMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_type_variation = &"EntryPoint_OuterMargin"

[node name="VBox" type="VBoxContainer" parent="OuterMargin"]
layout_mode = 2
theme_type_variation = &"MediumSeparation"

[node name="Block1" type="VBoxContainer" parent="OuterMargin/VBox"]
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="Logo" type="TextureRect" parent="OuterMargin/VBox/Block1"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_4vfht")

[node name="Welcome" type="Label" parent="OuterMargin/VBox/Block1"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderLarge"
text = "Welcome to Habituary!"

[node name="Block2" type="VBoxContainer" parent="OuterMargin/VBox"]
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="Instruction" type="Label" parent="OuterMargin/VBox/Block2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Where do you want to store your to-dos?"

[node name="Form" type="VBoxContainer" parent="OuterMargin/VBox/Block2"]
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="DirectoryPath" type="LineEdit" parent="OuterMargin/VBox/Block2/Form"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "<store path>"
alignment = 1
editable = false
context_menu_enabled = false
select_all_on_focus = true

[node name="Buttons" type="HBoxContainer" parent="OuterMargin/VBox/Block2/Form"]
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="BrowseFiles" type="Button" parent="OuterMargin/VBox/Block2/Form/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Browse Files..."

[node name="Confirm" type="Button" parent="OuterMargin/VBox/Block2/Form/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Confirm"

[node name="ErrorMessage" type="Label" parent="OuterMargin/VBox/Block2/Form"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Error"
text = "Invalid path! Please choose another one."
horizontal_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(700, 500)
min_size = Vector2i(700, 190)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
